# kewer

./: .gitignore  LICENSE  README.md  environment.yml  eval.sh  make-dataset.sh  make-indexed.sh  requirements.txt
bm25f/: batch-search.sh  fields.json  learn-bm25f.json  learn-bm25f.sh  traversals-config.json
embeddings/Joint/StarSpace-joint/: CMakeLists.txt  README.md
embeddings/Joint/StarSpace-joint/src/: data.cpp  dict.cpp  dict.h  model.cpp  parser.cpp  parser.h  starspace.cpp
embeddings/Joint/StarSpace-joint/src/utils/: args.cpp  args.h
entity-extraction/: extract-entities.py  queries-v2.json  query-entities.json
interpolation/: interpolate-folds-tw.py
interpolation-el/: interpolate-folds-tw-scores.py
qrels/: INEX-LD.txt  ListSearch.txt  QALD2.txt  SemSearch-ES.txt  qrels.txt
queries/: INEX_LD-0-test.tsv  INEX_LD-0-train.tsv  INEX_LD-1-test.tsv  INEX_LD-1-train.tsv  INEX_LD-2-test.tsv  INEX_LD-2-train.tsv  INEX_LD-3-test.tsv  INEX_LD-3-train.tsv  INEX_LD-4-test.tsv  INEX_LD-4-train.tsv  ListSearch-0-test.tsv  ListSearch-0-train.tsv  ListSearch-1-test.tsv  ListSearch-1-train.tsv  ListSearch-2-test.tsv  ListSearch-2-train.tsv  ListSearch-3-test.tsv  ListSearch-3-train.tsv  ListSearch-4-test.tsv  ListSearch-4-train.tsv  QALD2-0-test.tsv  QALD2-0-train.tsv  QALD2-1-test.tsv  QALD2-1-train.tsv  QALD2-2-test.tsv  QALD2-2-train.tsv  QALD2-3-test.tsv  QALD2-3-train.tsv  QALD2-4-test.tsv  QALD2-4-train.tsv  SemSearch_ES-0-test.tsv  SemSearch_ES-0-train.tsv  SemSearch_ES-1-test.tsv  SemSearch_ES-1-train.tsv  SemSearch_ES-2-test.tsv  SemSearch_ES-2-train.tsv  (+4 more)
(+111 files in other folders)
